--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -7,6 +7,7 @@
   display: grid;
   grid-template-columns: auto 1fr;
   margin-bottom: 2rem;
+  width: 500px;
 }
 .nav-links {
     list-style-type: none;
@@ -24,6 +25,18 @@
      &:hover {
         color: $mainGreen;
      }
+}
+@media screen and (min-width: 768px){
+  .navbar {
+  width: 100%;
+  }
+}
+
+@media screen and (min-width: 450px){
+  .navbar {
+  width: 100%;
+  }
+  
 }
 
 .navbar img {
